style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

/**:before,
*:after {
 box-sizing: border-box;
}*/

body {
	font-family: 'Open Sans', 'Arial', sans-serif;
	max-width: 4000px;
	background: 
        linear-gradient(
          rgba(0, 0, 0, 0.80), 
          rgba(0, 0, 0, 0.80)
        ),
		#000000 url("images/background.jpg") no-repeat center fixed;
	background-size: cover;
	color: white;
	font-weight: bold;
}

html, body {
	height: 100%;
	position: relative;
}


#responsive {
	z-index: -1;
	width: 100%;
	height: 0;
	padding-bottom: 56.25%;
	position: relative;
}

#responsive iframe {
	position: absolute;
	width: 100%;
	height: 100%;

}

.youtube-sizing {
	width: 90vh;
	margin: 0 auto;

}

@media screen and (max-width: 855px) {
	.youtube-sizing {
		max-width: 100%;
	}
}

@media screen and (width: 1024px) and (height: 1366px) {
	.youtube-sizing {
		max-width: 100%;
	}
}




.mainContent {
	color: white;
	text-align: center;
	width: 75vw;
	height: 23vh;
	max-height: 200px;
	min-height: 110px;
	background-color: transparent;
	margin: 4vh auto 10px auto;
	padding: 1vw;
	border-color: white;
	border-width: 0px;
	border-style: solid;
	border-radius: 100px;
	max-width: 702px;
	min-width: 197px;
	background-image: url("");
	background-repeat: no-repeat;
	background-size: cover;

}

#desktop-logo {
	display: block;
	position: relative; 
	margin: 15px auto 20px auto;
	text-align: center;
	width: 100%;
	max-width: 915px;
}



#desktop-logo a {
	min-width: 44px;
	min-height: 44px;
}

div #desktop-logo img {
	width: 70%;
	min-width: 570px;
	max-width: 915px;
	border-radius: 25px;
	padding: 10px;
}

#desktop-logo img {
	transition: .5s;
}

#desktop-logo img:hover {
	width: 80%;
	background-image: url("images/background.jpg");
}

@media screen and (max-width: 1024px) {
	#desktop-logo {
		text-align: left;
		margin-bottom: 55px;
		margin-left: 20px;
	}
}

@media screen and (max-width: 765px) {
	#desktop-logo {
		display: none;
	}
}

#mobile-bar-container {
	display: none;
	position: relative;
	height: 130px;
	width: 100%;
}

#mobile-logo {
	
	position: fixed; 
	margin-top: 15px;
	margin-right: auto; 
	margin-bottom: 13vw; 
	margin-left: auto;
	text-align: center;
	width: 100%;
	max-width: 915px;
	display: none;
	z-index: 1;
}

@media screen and (max-width: 270px) {
	#mobile-logo {
		text-align: left;
		left: 20%;
		right: 70%;
	}
}

@media screen and (max-width: 1024px) {
	#mobile-bar-container {
    margin-bottom: 13vw;
   	}
}

@media screen and (max-width: 765px) and (min-height: 800px){
	#mobile-bar-container {
			margin-bottom: calc(13vw + 6vh); 
	}
}

@media screen and (max-width: 500px) and (min-height: 945px){
	#mobile-bar-container {
			margin-bottom: calc(13vw + 11vh); 
	}
}

/*@media screen and (min-width: 766px) and (min-height: 960px){
	#desktop-logo {
			margin-bottom: calc(13vw + 5vh); 
	}
}*/

#mobile-logo img {
	height: 100px;
}

#mobile-logo img:hover {
	filter: invert(48%) sepia(68%) saturate(3016%) hue-rotate(232deg) brightness(102%) contrast(101%);
}

@media screen and (max-width: 765px) {
	#mobile-logo, #mobile-bar-container {
		display: block;
	}
}






#navbar {
	opacity: 0.5;
	text-align: center;
	text-transform: uppercase;
	font-size: calc(18px + .5vw);
	margin-bottom: 4vh;
}

@media screen and (max-width: 470px) {
	#navbar {
		margin-bottom: 13vh;
	}
}

#navbar nav {
	height: 200px;
}

#navbar a, li, ul {
	display: inline-block;

}

#navbar a {
	transition: .25s;
}

#navbar li {
	margin-left: 75px;
	margin-right: 75px;
}

#navbar li.leftmost-nav {
	margin-left: 0px;
	margin-right: 190px;
}

#navbar li.rightmost-nav {
	margin-right: 0px;
	margin-left: 190px;
}

@media screen and (max-width: 858px) {
	#navbar li, #navbar li.rightmost-nav, #navbar li.leftmost-nav {
		margin-left: 8vw;
		margin-right: 8vw;}
	}

@media screen and (max-width: 464px) {
	#navbar li, #navbar li.rightmost-nav, #navbar li.leftmost-nav {
		margin-left: 5vw;
		margin-right: 5vw;}
	}

@media screen and (max-width: 331px) {
	#navbar li, #navbar li.rightmost-nav, #navbar li.leftmost-nav {
		margin-left: 5vw;
		margin-right: 5vw;
		font-size: 15px;
	}
	}

@media screen and (max-width: 1024px) {
	#navbar {
		display: none;
	}
}

#navbar li:hover > a{
	font-size: 30px;
	color: #a36aff;
	opacity: 1;
}

/*#navbar ul:hover {
	background-image: url("images/background.jpg");
	background-repeat: no-repeat;
	background-attachment: fixed;

}*/




@media screen and (max-width: 597px) {
	#navbar li:hover > a {
		font-size: 23px ;

	}
}

@media screen and (max-width: 439px) {
	#navbar li:hover > a {
		font-size: 20px ;

	}
}

#mobile-nav {
	display: none;
	position: fixed;
	top: 65px;
	right: 60px;
	color: rgb(244 228 244 / 48%);
	z-index: 2;
}

#mobile-bar {
	display: none;
	position: fixed;
	height: 130px;
	width: 100%;
	top: 0px;
/*	background-color: rgb(48 9 58 / 81%);*/
background-image: linear-gradient(to bottom right, rgb(17 197 216 / 48%), rgb(114 25 136 / 57%));
}

@media screen and (max-width: 1024px) {
	#mobile-nav {
		display: block;
	}
}

@media screen and (max-width: 765px) {
	#mobile-nav {
		top: 42px;
		right: 30px;
	}
	#mobile-bar {
		display: block;
	}
}

/* nav bar is 105px tall, middle point would be 52.5px. mobile nav is 48px tall, middle would be 24px */

#mobile-nav:hover {
	color: #a36aff;
	opacity: 1;
}


#separator {
/*	height: 150px;
	clear: both;*/
}

/*737 to 688*/



#social {
/*	position: absolute;*/
	margin-top: 100px;
/*	bottom: 25px;
	left: 0;
	right: 0;*/
	text-align: center;
/*	font-size: 12.5px;*/
	background-color: rgb(121 58 58 / 15%);
}



#social li a i {
	padding: 10px;
}

@media screen and (max-width: 1024px) {
	#social {
		margin-top: 13vw;
	}
}

@media screen and (max-width: 765px) and (min-height: 800px){
	#social {
		margin-top: calc(13vw + 6vh); 
		background: rgb(255 255 255 / 0%);
	
	}
}

@media screen and (max-width: 765px) and (min-height: 800px){
	#social {
			margin-top: calc(13vw + 6vh); 
	}
}

@media screen and (max-width: 500px) and (min-height: 945px){
	#social {
			margin-top: calc(13vw + 11vh); 
	}
}

/*@media screen and (min-width: 766px) and (min-height: 960px){
	#social {
			margin-top: calc(13vw + 5vh); 
	}
}*/

#social ul {
	height: 100%;
	width: 100%;

}

i.fab, i.far {
	opacity: 0.60;
	transition: .2s;
}

#social i {
	transition: .2s;
}

#social i:hover {
	color: #a36aff;
	opacity: 1;
	font-size: 40px;
/*	padding: 20px;*/
}

@media screen and (max-width: 1024px) {
	#social i:hover {
		color: #a36aff;
		opacity: 1;
		font-size: 50px;
	}
}

#social li {
	margin: 12px 18px 12px 18px;
	bottom: 30px;
	display: inline-block;
	/*width: 15%;*/
}

@media screen and (max-width: 737px) {
	#social li {
		width: 15%;
	}
	#social i:hover {
		font-size: 34px;
	}
}

@media screen and (max-width: 737px) and (min-width: 700px) {
	#social li {
		margin-bottom: 3px;
	}

	}

@media screen and (max-width: 391px) {
	#social li {
		margin: 2vw ;
		width: 20%;
	}
}

@media screen and (max-width: 220px) {
	#social li {
		margin: 0;
		width: 30%;
	}
}

/* At 1024px, the site enters the tablet-phone size. I need to turn the navbar into a hamburger menu at that
point and animate the logo to disappear and just the 'M' part remains to the left of hamburger menu. */

@media screen and (min-width: 1024px) and (orientation: landscape) {
	#social {
		font-size: 12.5px;
	}
}

@media screen and (max-width: 1024px) {
	#social {
		bottom: 70px;
		font-size: 11.5px;
	}
}

#WIP {
	text-align: center; 
	padding: 75px 20px; 
	margin-left: 25vw; 
	margin-right: 25vw; 
	font-size: 19px;"
}

@media screen and (max-width: 1061px) {
	#WIP {
		margin-left: 10vw;
		margin-right: 10vw;
	}
}

i.fab:active, i.far:active {
	color: #FF00FB;
}

a:link {
	color: white;
	text-decoration: none;
}

a:visited {
	color: white;
	text-decoration: none;
}

a:hover {
	color: #a548d2;
	transition:.2s;
	opacity: 1;

}
a:active {
	color: blue;
}

@media screen and (max-width: 303px) {
/*	div img {
		width: 90%;
		min-width: 125px;
	}*/
	.mainContent {
		width: 75vw;
		height: 25vh;
		min-height: 1px;
		min-width: 1px;
	}
}

@media screen and (max-width: 204px) {
	img {

	}
}

/* Test turn off/on background colors */
/*
 body, #navbar, #social p, #navbar li, #social div, #social li, #mobile-logo, #desktop-logo, .iframe-container, .youtube-sizing, #separator, .responsive, #social div, #social ul {
	background-color: rgba(244, 120, 84, 0.2);} 

#mobile-nav, div #social {background-color: rgba(220, 120, 84, 0.2);}	

.main-container {background-color: rgba(60, 120, 200, 0.1);}*/



/* ^ Test turn off/on background colors ^ */

